@@ -1,3 +1,8 @@
+2019-09-02  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/91589
+	* gfortran.dg/pr91589.f90 : New test.
+
 2019-09-02  Steven G. Kargl  <kargl@gc.gnu.org>
 
 	PR fortran/91552
